add: render, utils

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -21,10 +21,9 @@
     </script>
 </head>
 <body>
-hello html
+{{username}}
 <p>
-
-    <input type="button" onclick="callapi();" value="CallAPI">
+<input type="button" onclick="callapi();" value="CallAPI">
 </p>
 <div id="result"></div>
 
